--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script>
+      var netmera = netmera || [];
+    </script>
+    <script src='//cdn.netmera-web.com/wsdkjs/mE9aS5UdHkPJG8qgGAp0khTFfTHW-qfudloUifm8efMyAY0Tiq6swg' async></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
