--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
     <script>var netmera = netmera || []</script>
-    <script src='//preprod.netmera.com/wsdkjs/2ZZSRETsnvhSVKYi2e9f2G5AjFHO_8GuTA0Qa9UPrvrYn4J7nPZ0QQ' async></script>
+    <script src='//cdn-preprod.netmera.com/wsdkjs/2ZZSRETsnvhSVKYi2e9f2G5AjFHO_8GuTA0Qa9UPrvrYn4J7nPZ0QQ' async></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
