integrate MyNetmeraUser class

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
     <script>var netmera = netmera || []</script>
-    <script src='//cdn.netmera-web.com/wsdkjs/mE9aS5UdHkPJG8qgGAp0khTFfTHW-qfudloUifm8efMyAY0Tiq6swg' async></script>
+    <script src="https://cdn-cloud-uat.netmera-web.com/wsdkjs/a0VUtZm_i9YhQbvbLHAdKLiY9nqPP9stkyIobnj_gpkyNYc0GAfaXQ" async></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
