--- a/public/netmera_worker.html
+++ b/public/netmera_worker.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<style>
+    <meta charset="UTF-8">
+    <style>
         .notification-wrapper {
             height: 120px;
             background-color: #fafafa;
@@ -92,7 +92,7 @@
             background-color: #999;
         }
     </style>
-<script>
+    <script>
 			function parseHashString() {
 				const parsed = {};
 				const validInputRegex = /^[a-zA-Z0-9\-_:/?#\@!$&'*+,;=.]+$/;
@@ -118,7 +118,7 @@
 
 			function init() {
 				const params = parseHashString();
-				const nmCdnHost = new URL('https://ntmtest.netmera-web.com').host;
+				const nmCdnHost = new URL('https://ntmpreprod.netmera-web.com').host;
 				const workerJsHost = new URL(params.wSrc).host;
 
 				if (nmCdnHost === workerJsHost || workerJsHost.endsWith('netmera-web.com') || workerJsHost.endsWith('netmera.com') || workerJsHost.endsWith('sdpaas.com')) {
@@ -137,24 +137,28 @@
 
     </script>
 </head>
+
 <body onload="init()">
+
 <div class="notification-wrapper" id="notification-dlg">
-<div class="notification-logo" id="notification-logo"></div>
-<div class="notification-text-wrapper">
-<div class="notification-title" id="notification-title">We would like to send you push notifications.</div>
-<div class="notification-info" id="notification-info">Learn Innovations and Campaigns Instantly, Do not Miss
-Opportunities!
+    <div class="notification-logo" id="notification-logo"></div>
+    <div class="notification-text-wrapper">
+        <div class="notification-title" id="notification-title">We would like to send you push notifications.</div>
+        <div class="notification-info" id="notification-info">Learn Innovations and Campaigns Instantly, Do not Miss
+            Opportunities!
+        </div>
+    </div>
+    <div style="clear: both;">
+        <div class="notification-buttons">
+            <div class="btn-notification btn-secondary" id="btn-later" onclick="nmWorker.onAskLaterClicked();">Ask
+                Later
+            </div>
+            <div class="btn-notification" id="btn-allow" onclick="nmWorker.onContinueOptinClicked();">Continue</div>
+        </div>
+        <div style="clear: both;"></div>
+    </div>
 </div>
-</div>
-<div style="clear: both;">
-<div class="notification-buttons">
-<div class="btn-notification btn-secondary" id="btn-later" onclick="nmWorker.onAskLaterClicked();">Ask
-Later
-</div>
-<div class="btn-notification" id="btn-allow" onclick="nmWorker.onContinueOptinClicked();">Continue</div>
-</div>
-<div style="clear: both;"></div>
-</div>
-</div>
+
+
 </body>
 </html>
