--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
     <script>var netmera = netmera || []</script>
-    <script src="https://cdn-preprod.netmera.com/wsdkjs/2ZZSRETsnvhSVKYi2e9f2MfGZZavAhFMZqMkpOrMyp0C3bBWYSaoAA" async></script>
+    <script src="https://cdn-cloud-uat.netmera-web.com/wsdkjs/VmfYnZx53b2QbMP47azjkZuHW5pPMUe4yztuzxddpaG8gZZzQ97QRA" async></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
