--- a/public/netmera_worker.html
+++ b/public/netmera_worker.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <style>
-        .notification-wrapper {
+<!doctype html><html><head><meta charset="UTF-8"><style>.notification-wrapper {
             height: 120px;
             background-color: #fafafa;
             padding: 20px;
@@ -90,10 +85,7 @@
 
         .btn-secondary {
             background-color: #999;
-        }
-    </style>
-    <script>
-			function parseHashString() {
+        }</style><script>function parseHashString() {
 				const parsed = {};
 				const validInputRegex = /^[a-zA-Z0-9\-_:/?#\@!$&'*+,;=.]+$/;
 
@@ -118,10 +110,10 @@
 
 			function init() {
 				const params = parseHashString();
-				const nmCdnHost = new URL('https://ntmpreprod.netmera-web.com').host;
+				const nmSdkArtifactHost = new URL('https://cloud-test.netmera-web.com/wsdk2').host;
 				const workerJsHost = new URL(params.wSrc).host;
 
-				if (nmCdnHost === workerJsHost || workerJsHost.endsWith('netmera-web.com') || workerJsHost.endsWith('netmera.com') || workerJsHost.endsWith('sdpaas.com')) {
+				if (nmSdkArtifactHost === workerJsHost || workerJsHost.endsWith('netmera-web.com') || workerJsHost.endsWith('netmera.com') || workerJsHost.endsWith('sdpaas.com')) {
 					const elm = document.createElement("script");
 					elm.type = "text/javascript";
 					elm.async = true;
@@ -131,34 +123,6 @@
 					};
 					document.getElementsByTagName("head")[0].appendChild(elm);
 				} else {
-					console.error('Netmara::fbox.js domain mismatch! nmCdnHost=' + nmCdnHost + ', fboxJsHost=' + workerJsHost);
+					console.error('Netmara::fbox.js domain mismatch! nmSdkArtifactHost=' + nmSdkArtifactHost + ', fboxJsHost=' + workerJsHost);
 				}
-			}
-
-    </script>
-</head>
-
-<body onload="init()">
-
-<div class="notification-wrapper" id="notification-dlg">
-    <div class="notification-logo" id="notification-logo"></div>
-    <div class="notification-text-wrapper">
-        <div class="notification-title" id="notification-title">We would like to send you push notifications.</div>
-        <div class="notification-info" id="notification-info">Learn Innovations and Campaigns Instantly, Do not Miss
-            Opportunities!
-        </div>
-    </div>
-    <div style="clear: both;">
-        <div class="notification-buttons">
-            <div class="btn-notification btn-secondary" id="btn-later" onclick="nmWorker.onAskLaterClicked();">Ask
-                Later
-            </div>
-            <div class="btn-notification" id="btn-allow" onclick="nmWorker.onContinueOptinClicked();">Continue</div>
-        </div>
-        <div style="clear: both;"></div>
-    </div>
-</div>
-
-
-</body>
-</html>
+			}</script></head><body onload="init()"><div class="notification-wrapper" id="notification-dlg"><div class="notification-logo" id="notification-logo"></div><div class="notification-text-wrapper"><div class="notification-title" id="notification-title">We would like to send you push notifications.</div><div class="notification-info" id="notification-info">Learn Innovations and Campaigns Instantly, Do not Miss Opportunities!</div></div><div style="clear: both;"><div class="notification-buttons"><div class="btn-notification btn-secondary" id="btn-later" onclick="nmWorker.onAskLaterClicked();">Ask Later</div><div class="btn-notification" id="btn-allow" onclick="nmWorker.onContinueOptinClicked();">Continue</div></div><div style="clear: both;"></div></div></div></body></html>
